2002-09-25    <karl@gnu.org>

	* strdup.c: copy from libc/string (via ../config/srclist*).
	* getopt*: copy from libc/posix.
	* .cppi-disable: add strdup.c.

2002-07-01  Jim Meyering  <meyering@lucent.com>

	* c-stack.c: Include sys/time.h.
	From Volker Borchert.

2002-06-11  Paul Eggert  <eggert@twinsun.com>

	* fnmatch.c, fnmatch_loop.c (WIDE_CHAR_SUPPORT):
	New macro.  Use it uniformly instead of
	(defined HAVE_WCTYPE_H && defined HAVE_WCHAR_H).
	It also uses HAVE_BTOWC, to fix a porting bug on Solaris 2.5.1
	reported by Vin Shelton.

2002-06-22  Jim Meyering  <meyering@lucent.com>

	* fnmatch.c (ISASCII, ISPRINT): Undefine, to avoid warning about
	redefinition due to Solaris5.6's definition in /usr/include/sys/euc.h.

2002-06-22  Paul Eggert  <eggert@twinsun.com>

	* c-stack.h (segv_handler, c_stack_action) [! defined SA_SIGINFO]:
	Do not assume SA_SIGINFO behavior.
	Bug reported by Jim Meyering on NetBSD 1.5.2.

2002-06-22  Jim Meyering  <meyering@lucent.com>

	* c-stack.c, c-stack.h: New files, from diffutils-2.8.2.

	* exitfail.c, exitfail.h: Likewise.
	* Makefile.am (libfetish_a_SOURCES): Add exitfail.c and exitfail.h.

	* Makefile.am (libfetish_a_SOURCES): Add fnmatch_.h in place
	of fnmatch.h.
	(EXTRA_DIST): Add fnmatch_loop.c.
	(libfetish_a_SOURCES): Add c-stack.c and c-stack.h.

	* fnmatch_loop.c: New file, from diffutils-2.8.2.
	* fnmatch.c: Update from diffutils-2.8.2.
	* fnmatch_.h: New file.  From diffutils-2.8.2.
	* fnmatch.h: Remove file.

2002-06-18  Paul Eggert  <eggert@twinsun.com>

	* file-type.h: Report an error if neither S_ISREG nor
	S_IFREG is defined, instead of using a test specific to glibc
	2.2.  This should be safe, since POSIX requires S_ISREG and
	Unix Version 7 had S_IFREG.  We don't need to check for
	<sys/types.h> since we don't use any symbols that it defines.

2002-06-15  Jim Meyering  <meyering@lucent.com>

	* file-type.h (FILE_TYPE_H): Guard entire contents with #ifndef.